ARM: dts: Misc fixes for pinky-rev1, plus mark it DEPRECATED
We'd like everyone to transition to rev2.  Put a big DEPRECATED
warning so people will see that rev1 is deprecated at bootup.

...but maybe not everyone can get their hands on a rev2 right away, so
do a few minor fixes.  This includes:
- Fix the write protect on SD cards.
- Fix the min voltage of the GPU rail

BUG=chrome-os-partner:30167
TEST=Build and boot

Change-Id: I072707e59f7bd2fc28d61c12d2ecfa7f9a794ee4
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/222640
Reviewed-by: Alexandru Stan <amstan@chromium.org>
Tested-by: simon xue <xxm@rock-chips.com>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -14,7 +14,7 @@
 #include "rk3288.dtsi"
 
 / {
-	model = "Google Pinky";
+	model = "Google Pinky Rev 1 (DEPRECATED)";
 	compatible = "google,veyron-pinky-rev1", "google,veyron-pinky",
 		     "google,veyron", "rockchip,rk3288";
 
@@ -273,6 +273,7 @@
 	status = "okay";
 	vmmc-supply = <&vcc33_sd_regulator>;
 	wp-gpios = <&gpio7 10 GPIO_ACTIVE_LOW>;
+	wp-inverted;					/* AKA active low */
 };
 
 &spi0 {
@@ -357,7 +358,7 @@
 			vdd_gpu: DCDC_REG2 {
 				regulator-always-on;
 				regulator-boot-on;
-				regulator-min-microvolt = <850000>;
+				regulator-min-microvolt = <800000>;
 				regulator-max-microvolt = <1250000>;
 				regulator-name = "vdd_gpu";
 				regulator-ramp-delay = <2000>;
