CHROMIUM: iommu/rockchip: select ARM_DMA_USE_IOMMU
This seems to be how other arm platforms select this CONFIG option.

I'll add this to the iommu patch and send a v3 upstream, but since we've
already landed v2 in our tree, let's just commit it separately.

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chrome-os-partner:31704
TEST=build with rockchip DRM test patches. iommu/rockchip is built, and
    UI comes up

Change-Id: I62f7dc5719388da354298542d95702ac4565f8c4
Reviewed-on: https://chromium-review.googlesource.com/222824
Reviewed-by: simon xue <xxm@rock-chips.com>
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

--- a/drivers/iommu/Kconfig
+++ b/drivers/iommu/Kconfig
@@ -160,6 +160,7 @@ config ROCKCHIP_IOMMU
 	bool "Rockchip IOMMU Support"
 	depends on ARCH_ROCKCHIP
 	select IOMMU_API
+	select ARM_DMA_USE_IOMMU
 	help
 	  Support for IOMMUs found on Rockchip rk32xx SOCs.
 	  These IOMMUs allow virtualization of the address space used by most
