CHROMIUM: ARM: dts: remove 0x from node's unit-addresses
The device tree node has name in the form <name>[@<unit-address>].
The <unit-address> field should be a hex number, but should not start with
0x.

Note: for rockchip,iommu this is fixed in the "upstream" version of the
dt binding & dt node patches.

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=none
TEST=emerge-veyron_pinky chromoes-kernel-3_14
TEST=sanity test ui w/ UI test patch series

Change-Id: I120b876869691dcc9dbad7af89b4510b3fc462a3
Reviewed-on: https://chromium-review.googlesource.com/223232
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>

Conflicts:
	Documentation/devicetree/bindings/arm/mali-midgard.txt

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -539,7 +539,7 @@
 		status = "disabled";
 	};
 
-	vopb_mmu: iommu@0xff930300 {
+	vopb_mmu: iommu@ff930300 {
 		compatible = "rockchip,iommu";
 		reg = <0xff930300 0x100>;
 		interrupts = <GIC_SPI 15 IRQ_TYPE_LEVEL_HIGH>;
@@ -548,7 +548,7 @@
 		status = "disabled";
 	};
 
-	vopl_mmu: iommu@0xff940300 {
+	vopl_mmu: iommu@ff940300 {
 		compatible = "rockchip,iommu";
 		reg = <0xff940300 0x100>;
 		interrupts = <GIC_SPI 16 IRQ_TYPE_LEVEL_HIGH>;
@@ -557,7 +557,7 @@
 		status = "disabled";
 	};
 
-	gpu: gpu@0xffa30000 {
+	gpu: gpu@ffa30000 {
 		compatible = "arm,malit764",
 			     "arm,malit76x",
 			     "arm,malit7xx",
