ARM: dts: Mark WiFi as non-removable
If we don't mark WiFi as non-remoable then the slot will be polled
every second.  This is just a waste.

Note that in the past we couldn't mark WiFi as non-removable because
it would cause weird interactions with the Marvell hack to reset the
card.  If we find that we need a way to reset the card we should use a
more official infrastructure than removing the slot and re-adding it.

It turns out that this polling also interferes with power-save in
brcmfmac (presumably command polling fails while the device is
or leaving sleep).

BUG=chrome-os-partner:30167,chrome-os-partner:33043
TEST=Add a printout in dw_mci_get_cd(), only see once per slot now.

Change-Id: Id51f6c3637de0feddda0edc21b5f51c44bae984d
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/223266
Reviewed-by: Paul Stewart <pstew@chromium.org>
Tested-by: Paul Stewart <pstew@chromium.org>

--- a/arch/arm/boot/dts/rk3288-pinky-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev1.dts
@@ -252,6 +252,7 @@
 	clocks = <&cru HCLK_SDIO0>, <&cru SCLK_SDIO0>, <&rk808 RK808_CLKOUT1>;
 	clock-names = "biu", "ciu", "card_ext_clock";
 	keep-power-in-suspend;
+	non-removable;
 	num-slots = <1>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&sdio0_clk &sdio0_cmd &sdio0_bus4>;
