ARM: dts: Add "bt regulator" to rk3288-veyron
Without this the bluetooth module doesn't get reset properly at
bootup when used with some cards.

BUG=chrome-os-partner:33828
TEST=BT works, even after a warm reset

Change-Id: I3f658bf0c7c3e55498e928d5e8ac79082ddde27f
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/233041
Reviewed-by: Paul Stewart <pstew@chromium.org>
Reviewed-by: Sonny Rao <sonnyrao@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -233,13 +233,39 @@
 		regulator-boot-on;
 	};
 
+	bt_regulator: bt-regulator {
+		/*
+		 * On the module itself this is one of these (depending
+		 * on the actual card pouplated):
+		 * - BT_I2S_WS_BT_RFDISABLE_L
+		 * - No connect
+		 */
+
+		compatible = "regulator-fixed";
+		enable-active-high;
+		gpio = <&gpio4 29 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&bt_enable_l>;
+		regulator-name = "bt_regulator";
+	};
+
 	wifi_regulator: wifi-regulator {
+		/*
+		 * On the module itself this is one of these (depending
+		 * on the actual card populated):
+		 * - SDIO_RESET_L_WL_REG_ON
+		 * - PDN (power down when low)
+		 */
+
 		compatible = "regulator-fixed";
 		enable-active-high;
 		gpio = <&gpio4 28 GPIO_ACTIVE_HIGH>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&wifi_enable_h>;
 		regulator-name = "wifi_regulator";
+
+		/* Faux input supply.  See bt_regulator description. */
+		vin-supply = <&bt_regulator>;
 	};
 
 	io-domains {
@@ -721,6 +747,11 @@
 	sdio0 {
 		wifi_enable_h: wifienable-h {
 			rockchip,pins = <4 28 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+
+		/* NOTE: mislabelled on schematic; should be bt_enable_h */
+		bt_enable_l: bt-enable-l {
+			rockchip,pins = <4 29 RK_FUNC_GPIO &pcfg_pull_none>;
 		};
 	};
 
