CHROMIUM: arm: storm: Use forced Speed and forced Duplex for GMACs
Its observed that auto link speed detect cannot be used for either of GMACs
connected to switch. Speed/duplex must always be fixed to 1G with Full Duplex.

BUG=chrome-os-partner:33008
TEST=tested 100Mbps connection on WAN port

Change-Id: I2c291e0811d5a59b1049cfddf03ad3c462afde51
Signed-off-by: Abhishek Airan <aairan@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/223642
Reviewed-by: Toshi Kikuchi <toshik@chromium.org>
Reviewed-by: Grant Grundler <grundler@chromium.org>
Commit-Queue: Toshi Kikuchi <toshik@chromium.org>
Tested-by: Toshi Kikuchi <toshik@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -328,8 +328,8 @@
 			qcom,rgmii_delay = <0>;
 			qcom,phy_mii_type = <0>;	/* RGMII */
 			qcom,emulation = <0>;
-			qcom,forced_speed = <0>;	/* speed auto */
-			qcom,forced_duplex = <255>;	/* duplex auto */
+			qcom,forced_speed = <1000>;	/* Force speed 1G */
+			qcom,forced_duplex = <1>;	/* Force duplex FD */
 			local-mac-address = [000000000000];
 			mdiobus = <&mdio0>;
 		};
