CHROMIUM: ARM: dts: tegra124: add ahub.emc clock to ahub node
Add the ahub.emc clock to the ahub node for its driver to vote for
the EMC rate.

BUG=chrome-os-partner:33082
TEST=built kernel and boot.

Change-Id: I243b59cd3f8907e1f2a59a1d04441757b3747e4c
Signed-off-by: Danny Huang <dahuang@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/223972
Reviewed-by: Dylan Reid <dgreid@chromium.org>
Tested-by: Titan Lee <titanlee@nvidia.com>
(cherry picked from commit 7e606afb98c8d1c10b0ac0de48cc861de65cedb0)
Reviewed-on: https://chromium-review.googlesource.com/226237
Commit-Queue: Dylan Reid <dgreid@chromium.org>

--- a/arch/arm/boot/dts/tegra124.dtsi
+++ b/arch/arm/boot/dts/tegra124.dtsi
@@ -603,11 +603,12 @@
 			 <&tegra_car TEGRA124_CLK_AFC2>,
 			 <&tegra_car TEGRA124_CLK_AFC3>,
 			 <&tegra_car TEGRA124_CLK_AFC4>,
-			 <&tegra_car TEGRA124_CLK_AFC5>;
+			 <&tegra_car TEGRA124_CLK_AFC5>,
+			 <&tegra_car TEGRA124_CLK_AHUB_EMC>;
 		clock-names = "d_audio", "apbif", "i2s0", "i2s1", "i2s2",
 			      "i2s3", "i2s4", "dam0", "dam1", "dam2",
 			      "spdif_in", "amx", "amx1", "adx", "adx1",
-			      "afc0", "afc1", "afc2", "afc3", "afc4", "afc5";
+			      "afc0", "afc1", "afc2", "afc3", "afc4", "afc5", "ahub.emc";
 		ranges = <0x70301000 0x0 0x70301000 0x500>;
 		#address-cells = <1>;
 		#size-cells = <1>;
