--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -307,7 +307,7 @@ config MIPS_MALTA
 	select BOOT_RAW
 	select CEVT_R4K
 	select CSRC_R4K
-	select CSRC_GIC
+	select CLKSRC_MIPS_GIC
 	select DMA_MAYBE_COHERENT
 	select GENERIC_ISA_DMA
 	select HAVE_PCSPKR_PLATFORM
@@ -346,7 +346,7 @@ config MIPS_SEAD3
 	select BOOT_RAW
 	select CEVT_R4K
 	select CSRC_R4K
-	select CSRC_GIC
+	select CLKSRC_MIPS_GIC
 	select CPU_MIPSR2_IRQ_VI
 	select CPU_MIPSR2_IRQ_EI
 	select DMA_NONCOHERENT
@@ -888,10 +888,6 @@ config CSRC_IOASIC
 	bool
 
 config CSRC_R4K
-	bool
-
-config CSRC_GIC
-	select MIPS_CM
 	bool
 
 config CSRC_SB1250
