CHROMIUM: arm64: dts: Add iommu entries for display on t132
Add IOMMU info. The headers are a little chaotic, so hardcode the swgroup
instead of using a define for now.

BUG=chrome-os-partner:31213
TEST=boot, watch graphics come up
CQ-DEPEND=CL:223609

Change-Id: I9839069d7c20c4ff4da1adc31e1671815386c84a
Signed-off-by: Olof Johansson <olofj@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/224415
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: Sean Paul <seanpaul@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -45,6 +45,7 @@
 			clock-names = "dc", "parent";
 			resets = <&tegra_car TEGRA124_CLK_DISP1>;
 			reset-names = "dc";
+			iommus = <&mc 1>;
 			nvidia,head = <0>;
 		};
 
@@ -59,6 +60,7 @@
 			clock-names = "dc", "parent";
 			resets = <&tegra_car TEGRA124_CLK_DISP2>;
 			reset-names = "dc";
+			iommus = <&mc 2>;
 			nvidia,head = <1>;
 		};
 
