--- a/arch/arm64/boot/dts/tegra132-norrin.dts
+++ b/arch/arm64/boot/dts/tegra132-norrin.dts
@@ -1,6 +1,7 @@
 /dts-v1/;
 
 #include <dt-bindings/input/input.h>
+#include <dt-bindings/soc/tegra-pmc.h>
 #include "tegra132.dtsi"
 
 / {
@@ -497,7 +498,8 @@
 	};
 
 	rtc {
-		nvidia,pmc-wakeup = <&pmc 1 16 4>;
+		nvidia,pmc-wakeup = <&pmc
+			PMC_WAKE_TYPE_EVENT 16 PMC_TRIGGER_TYPE_HIGH>;
 	};
 
 	i2c@7000d000 {
@@ -511,7 +513,8 @@
 			interrupts = <GIC_SPI 86 IRQ_TYPE_NONE>;
 			interrupt-controller;
 			#interrupt-cells = <2>;
-			nvidia,pmc-wakeup = <&pmc 1 18 8>;
+			nvidia,pmc-wakeup = <&pmc
+				PMC_WAKE_TYPE_EVENT 18 PMC_TRIGGER_TYPE_LOW>;
 
 			gpio-controller;
 			#gpio-cells = <2>;
