CHROMIUM: ARM64: dts: ryu: use new #defines for PMC wakeup sources
We added the human readable #defines for PMC wakeup sources. Now apply
it to DT file.

BUG=chrome-os-partner:31211
TEST=suspend/resume from LP0

Change-Id: I83b1f5cf88124e4cafdeb0aaacecea5c0a2a59ac
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/224642
Reviewed-by: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/input/input.h>
+#include <dt-bindings/soc/tegra-pmc.h>
 #include "tegra132.dtsi"
 #include "tegra132-ryu-emc.dtsi"
 #include "tegra132-ryu-gpio-default.dtsi"
@@ -21,7 +22,8 @@
 	};
 
 	rtc {
-		nvidia,pmc-wakeup = <&pmc 1 16 4>;
+		nvidia,pmc-wakeup = <&pmc
+			PMC_WAKE_TYPE_EVENT 16 PMC_TRIGGER_TYPE_HIGH>;
 	};
 
 	host1x@50000000 {
