--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -252,6 +252,7 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3188-radxarock.dtb \
 	rk3288-evb-act8846.dtb \
 	rk3288-evb-rk808.dtb \
+	rk3288-jerry-rev1.dtb \
 	rk3288-pinky-rev2.dtb \
 	rk3288-pinky-rev1.dtb \
 	rk3288-pinky-rev0.dtb
