CHROMIUM: storm: hook gpio7 to gpio-leds
This exports gpio7/gpio9 under /sys/class/leds/ for use by programs to manage
two LEDs. "SPARE_LED" (as shown on the schematic) is NOT actually hooked up.

BUG=chrome-os-partner:32248
TEST=build/boot on storm. "echo 1 > /sys/class/leds/LED1/brightness"
and watch LED1 (gpio7) light up. "echo 0" to turn LED1 off.
Repeat for STATUS_FAIL LED.

Change-Id: I47d1c242eb6c247b9e1ccdac6c497c96c5519976
Signed-off-by: Grant Grundler <grundler@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/225762
Reviewed-by: Bryan Freed <bfreed@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -113,6 +113,15 @@
 					drive-strength = <12>;
 				};
 			};
+
+			leds_pins: led_pinmux {
+				mux {
+					pins = "gpio7", "gpio9";
+					drive-strength = <2>;
+					bias-none;
+					output-high;
+				};
+			};
 		};
 
 		gsbi1: gsbi@12440000 {
@@ -253,6 +262,23 @@
 
 		usb30@1 {
 			status = "ok";
+		};
+
+		gpio-leds {
+			compatible = "gpio-leds";
+			pinctrl-0 = <&leds_pins>;
+
+			led1 {
+				gpios = <&qcom_pinmux 7 0>;
+				label = "LED1";
+				default-state = "off";
+			};
+
+			statusfail {
+				gpios = <&qcom_pinmux 9 0>;
+				label = "STATUS_FAIL";
+				default-state = "off";
+			};
 		};
 
 		amba {
