CHROMIUM: add whirlwind device tree
add whirlwind device tree. This is nearly a clone of storm. LEDs are
different and one GPIO is disconnected.

BUG=chrome-os-partner:32295
TEST=build/boot on whirlwind

Change-Id: I3389a4e93e4ec88d78c1c8f35f966097894d549b
Signed-off-by: Grant Grunder <grundler@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/225763
Reviewed-by: Bryan Freed <bfreed@chromium.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -239,6 +239,7 @@ dtb-$(CONFIG_ARCH_QCOM) += \
 	qcom-msm8660-surf.dtb \
 	qcom-msm8960-cdp.dtb \
 	qcom-ipq8064-ap148.dtb \
+	qcom-ipq8064-whirlwind.dtb \
 	qcom-ipq8064-storm.dtb
 dtb-$(CONFIG_ARCH_U8500) += ste-snowball.dtb \
 	ste-hrefprev60-stuib.dtb \
