CHROMIUM: ARM64: dts: tegra132: add throttle cfgs to soctherm node
Adds throttle control "heavy", "oc1", "oc4", and configure them.

BUG=chrome-os-partner:30834
TEST=cat /sys/kernel/debug/tegra_soctherm/regs.

Signed-off-by: Wei Ni <wni@nvidia.com>
Change-Id: If19da4a724a4b473c898f0bd6816eadbfd6d0271
Reviewed-on: https://chromium-review.googlesource.com/225600
Tested-by: Wei Ni <wni.nvidia@gmail.com>
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: Wei Ni <wni.nvidia@gmail.com>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -741,4 +741,26 @@
 		         <&tegra_car TEGRA124_CLK_EXTERN1>;
 		clock-names = "pll_a", "pll_a_out0", "mclk";
 	};
+
+	soctherm: soctherm@0,700e2000 {
+		throttle-cfgs {
+			/* Voltage compartor NCS2202 connect to OC1 */
+			oc1 {
+				alarm-filter = <5100000>;
+				alarm-cnt-threshold = <100>;
+				polarity = <1>; /* ACTIVE_LOW */
+				priority = <70>;
+				cpu-throt-level = <TEGRA_SOCTHERM_THROT_LEVEL_MED>;
+			};
+
+			/* Battery charger BQ24773 PROCHOT connect to OC4 */
+			oc4 {
+				alarm-filter = <5100000>;
+				alarm-cnt-threshold = <15>;
+				polarity = <1>; /* ACTIVE_LOW */
+				priority = <50>;
+				cpu-throt-level = <TEGRA_SOCTHERM_THROT_LEVEL_LOW>;
+			};
+		};
+	};
 };
