--- a/chromeos/config/base.config
+++ b/chromeos/config/base.config
@@ -634,6 +634,7 @@ CONFIG_HID_MULTITOUCH=m
 # CONFIG_HID_PANTHERLORD is not set
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
+CONFIG_HID_PLANTRONICS=m
 CONFIG_HID_PRIMAX=m
 # CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_PS3REMOTE is not set
