CHROMIUM: ARM: dts: rockchip: add dmc nodes for dmc
Add dmc nodes to support dmc (dynamic memory controller)

BUG=chrome-os-partner:31440, chrome-os-partner:32377
TEST=powerd_dbus_suspend

Change-Id: I88845ac2b792496f62211b6f7b303044df8bfae5
Signed-off-by: Kever Yang <kever.yang@rock-chips.com>
Signed-off-by: Jeff Chen <cym@rock-chips.com>
[dianders: just the memory controller for now]
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/230334
Reviewed-by: Derek Basehore <dbasehore@chromium.org>

--- a/arch/arm/boot/dts/rk3288.dtsi
+++ b/arch/arm/boot/dts/rk3288.dtsi
@@ -426,6 +426,18 @@
 		status = "disabled";
 	};
 
+	dmc: dmc@ff610000 {
+		compatible = "rockchip,rk3288-dmc";
+		reg = <0xff610000 0x3fc
+		       0xff620000 0x294
+		       0xff630000 0x3fc
+		       0xff640000 0x294>;
+		clocks = <&cru PCLK_DDRUPCTL0>, <&cru PCLK_PUBL0>,
+			 <&cru PCLK_DDRUPCTL1>, <&cru PCLK_PUBL1>;
+		clock-names = "pclk_ddrupctl0", "pclk_publ0",
+			      "pclk_ddrupctl1", "pclk_publ1";
+	};
+
 	i2c0: i2c@ff650000 {
 		compatible = "rockchip,rk3288-i2c";
 		reg = <0xff650000 0x1000>;
@@ -682,6 +694,11 @@
 		>;
 		power-domains = <&power RK3288_PD_GPU>;
 		status = "disabled";
+	};
+
+	noc: syscon@ffac0000 {
+		compatible = "rockchip,rk3288-noc", "syscon";
+		reg = <0xffac0000 0x2000>;
 	};
 
 	gic: interrupt-controller@ffc01000 {
