CHROMIUM: ARM: dts: enable thermal on rk3288-veyron board
BUG=chrome-os-partner:32639
TEST=build and boot;

Signed-off-by: Caesar Wang <caesar.wang@rock-chips.com>
Change-Id: I81ed66bf5b6507701fc8562a5d672fbc68aa0f47
Reviewed-on: https://chromium-review.googlesource.com/223010
Reviewed-by: Dmitry Torokhov <dtor@chromium.org>

--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -578,6 +578,12 @@
 	status = "okay";
 };
 
+&tsadc {
+	tsadc-tshut-mode = <1>; /* tshut mode 0:CRU 1:GPIO */
+	tsadc-tshut-polarity = <1>; /* tshut polarity 0:LOW 1:HIGH */
+	status = "okay";
+};
+
 &pinctrl {
 
 	/* Add this for sdmmc pins to SD card */
