--- a/arch/arm/boot/dts/rk3288-jerry-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-jerry-rev1.dts
@@ -16,3 +16,15 @@
 	compatible = "google,veyron-jerry-rev1", "google,veyron-jerry",
 		     "google,veyron", "rockchip,rk3288";
 };
+
+&rk808 {
+	regulators {
+		mic_vcc: LDO_REG2 {
+			regulator-always-on;
+			regulator-boot-on;
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-name = "mic_vcc";
+		};
+	};
+};
