--- a/arch/arm/boot/dts/rk3288-veyron.dtsi
+++ b/arch/arm/boot/dts/rk3288-veyron.dtsi
@@ -643,7 +643,7 @@
 	emmc {
 		/* Make sure eMMC is not in reset */
 		emmc_deassert_reset: emmc-deassert-reset {
-			rockchip,pins = <7 12 RK_FUNC_GPIO &pcfg_output_high>;
+			rockchip,pins = <7 12 RK_FUNC_GPIO &pcfg_pull_up>;
 		};
 	};
 
