CHROMIUM: ARM64: dts: ryu: set vendor name for compass
Change to asahi-kasei, to be coherent with existing driver.

BUG=chrome-os-partner:31072
TEST=Run on ryu, check raw value from iio.

Change-Id: I7a8d47613c29504f6f2b1231d8111869eae4f7b2
Signed-off-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/226114
Reviewed-by: Benson Leung <bleung@chromium.org>

--- a/arch/arm64/boot/dts/tegra132-ryu.dtsi
+++ b/arch/arm64/boot/dts/tegra132-ryu.dtsi
@@ -130,7 +130,7 @@
 				};
 
 				compass: ak09912@c {
-					compatible = "akm,ak09912";
+					compatible = "asahi-kasei,ak09912";
 					reg = <0xc>;
 				};
 
