CHROMIUM: arm: dts: storm: Deassert switch reset using pinmux
Switch reset deassertion was removed from the bootloader, therefore
we now need to perform this operation in the kernel. This change
restores ethernet functionality on Storm.

BUG=chrome-os-partner:32646
TEST=booted the kernel - switch registers can now be read and ethernet
     interfaces are both showing up

Change-Id: I9ac3502f7bce0743b4830685948821d00c53556a
Signed-off-by: Mathieu Olivari <mathieu@codeaurora.org>
Reviewed-on: https://chromium-review.googlesource.com/226126
Reviewed-by: Toshi Kikuchi <toshik@chromium.org>
Commit-Queue: Toshi Kikuchi <toshik@chromium.org>
Tested-by: Toshi Kikuchi <toshik@chromium.org>
Reviewed-by: Bryan Freed <bfreed@chromium.org>

--- a/arch/arm/boot/dts/qcom-ipq8064-storm.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-storm.dts
@@ -122,6 +122,13 @@
 					output-high;
 				};
 			};
+
+			switch_reset: switch_reset {
+				rst {
+					pins = "gpio26";
+					output-low;
+				};
+			};
 		};
 
 		gsbi1: gsbi@12440000 {
@@ -300,6 +307,8 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			gpios = <&qcom_pinmux 1 0 &qcom_pinmux 0 0>;
+			pinctrl-0 = <&switch_reset>;
+			pinctrl-names = "default";
 
 			phy4: ethernet-phy@0 {
 				device_type = "ethernet-phy";
@@ -381,6 +390,7 @@
 			compatible = "qca8337-lite";
 			mdiobus = <&mdio0>;
 		};
+
 		watchdog@208a038 {
 			compatible = "qcom,kpss-wdt-ipq8064";
 			reg = <0x0208a038 0x40>;
