CHROMIUM: ARM: dts: move sdmmc wp to specific rk3288-veyron board dts
jerry rev1 board support microSD which there is no write
protect, it is different from pinky rev2 board, so we move the
write protect properties to each board dts.

BUG=chrome-os-partner:33269
TEST=Boot pinky rev2 board and jerry rev1 board,
and test sdmmc write function.

Change-Id: I36ecbc1b8f3418a952474cb7f5013b3ee35cdc4e
Signed-off-by: huang lin <hl@rock-chips.com>
Reviewed-on: https://chromium-review.googlesource.com/226781
Reviewed-by: Doug Anderson <dianders@chromium.org>
Commit-Queue: Doug Anderson <dianders@chromium.org>
Tested-by: Doug Anderson <dianders@chromium.org>

--- a/arch/arm/boot/dts/rk3288-jerry-rev1.dts
+++ b/arch/arm/boot/dts/rk3288-jerry-rev1.dts
@@ -28,3 +28,10 @@
 		};
 	};
 };
+
+&sdmmc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&sdmmc_clk &sdmmc_cmd &sdmmc_cd_disabled &sdmmc_cd_gpio
+			&sdmmc_bus4>;
+	disable-wp;
+};
