--- a/arch/arm/boot/dts/rk3288-pinky-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev2.dts
@@ -16,3 +16,11 @@
         compatible = "google,veyron-pinky-rev2", "google,veyron-pinky",
                      "google,veyron", "rockchip,rk3288";
 };
+
+&sdmmc {
+	pinctrl-names = "default";
+	pinctrl-0 = <&sdmmc_clk &sdmmc_cmd &sdmmc_cd_disabled &sdmmc_cd_gpio
+			&sdmmc_wp_gpio &sdmmc_bus4>;
+	wp-gpios = <&gpio7 10 GPIO_ACTIVE_LOW>;
+	wp-inverted;                             /* AKA active low */
+};
