CHROMIUM: ARM: rockchip: DDR suspend/resume code
Support deep sleep mode where we put SDRAM in self refresh mode.

This isn't the total cleanest patch in the world and wouldn't survive
upstream scrutiny, but I think it's ready to land in our tree.  A few
things to note:

* We probably need a real DMC driver somewhere.  Some (or all) of this
  code might belong there with API calls into it.
* We may want to share some/all of this code with the DDRFreq driver.

BUG=chrome-os-partner:32377
TEST=echo Y > /sys/module/pm/parameters/deep_sleep; powerd_dbus_suspend

Change-Id: Ib919f7855337238736a4ef8247331a8905ced603
Signed-off-by: Chris Zhong <zyw@rock-chips.com>
Signed-off-by: Doug Anderson <dianders@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/227366
Reviewed-by: Julius Werner <jwerner@chromium.org>

--- a/arch/arm/mach-rockchip/embedded/Makefile
+++ b/arch/arm/mach-rockchip/embedded/Makefile
@@ -21,7 +21,7 @@
 
 obj-$(CONFIG_PM_SLEEP) += rk3288_resume.bin.o
 
-targets := rk3288_resume.o \
+targets := rk3288_resume.o rk3288_ddr_resume.o \
 	rk3288_resume.elf rk3288_resume.lds \
 	rk3288_resume.bin rk3288_resume.bin.o
 
@@ -38,7 +38,9 @@ KBUILD_CFLAGS += -fno-stack-protector
 
 # This is the ELF for the embedded binary
 LDFLAGS_rk3288_resume.elf := -Bstatic -nostdlib -T
-$(obj)/rk3288_resume.elf: $(obj)/rk3288_resume.lds $(obj)/rk3288_resume.o \
+$(obj)/rk3288_resume.elf: $(obj)/rk3288_resume.lds \
+			  $(obj)/rk3288_resume.o \
+			  $(obj)/rk3288_ddr_resume.o \
 			  FORCE
 	$(call if_changed,ld)
 
