--- a/arch/arm/boot/dts/rk3288-thermal.dtsi
+++ b/arch/arm/boot/dts/rk3288-thermal.dtsi
@@ -56,10 +56,23 @@ gpu_thermal: gpu_thermal {
 	thermal-sensors = <&tsadc	2>;
 
 	trips {
+		gpu_alert0: gpu_alert0 {
+			temperature = <80000>; /* millicelsius */
+			hysteresis = <2000>; /* millicelsius */
+			type = "passive";
+		};
 		gpu_crit: gpu_crit {
 			temperature = <120000>; /* millicelsius */
 			hysteresis = <2000>; /* millicelsius */
 			type = "critical";
+		};
+	};
+
+	cooling-maps {
+		map0 {
+			trip = <&gpu_alert0>;
+			cooling-device =
+				<&cpu0 THERMAL_NO_LIMIT THERMAL_NO_LIMIT>;
 		};
 	};
 };
