--- a/arch/arm/boot/dts/rk3288-pinky-rev2.dts
+++ b/arch/arm/boot/dts/rk3288-pinky-rev2.dts
@@ -17,6 +17,22 @@
                      "google,veyron", "rockchip,rk3288";
 };
 
+&cpu0 {
+	operating-points = <
+		/* KHz    uV */
+		1800000 1300000
+		1608000 1200000
+		1416000 1150000
+		1200000 1100000
+		1008000 1050000
+		 816000 1000000
+		 600000  900000
+		 408000  850000
+		 216000  850000
+		 126000  850000
+	>;
+};
+
 &sdmmc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&sdmmc_clk &sdmmc_cmd &sdmmc_cd_disabled &sdmmc_cd_gpio
