CHROMIUM: arm64: dts: tegra132: add PMU node
Tegra132 supports ARMv8 PMUv3, so adds PMU node in DT.

BUG=none
TEST=boot test on Ryu;
     using 'perf' to check the HW event is supported;
     and test with the cmd
     $> perf stat -B python -m timeit '2*(3+(4-(5%6)))'

Change-Id: Ib0e4f29630a34be5aef6aee4b71882eaa11284a1
Signed-off-by: Joseph Lo <josephl@nvidia.com>
Reviewed-on: https://chromium-review.googlesource.com/227951
Reviewed-by: David Riley <davidriley@chromium.org>
Commit-Queue: David Riley <davidriley@chromium.org>

--- a/arch/arm64/boot/dts/tegra132.dtsi
+++ b/arch/arm64/boot/dts/tegra132.dtsi
@@ -1039,4 +1039,10 @@
 		cdev-type = "DFLL-floor";
 		#cooling-cells = <2>; /* min followed by max */
 	};
+
+	pmu {
+		compatible = "arm,armv8-pmuv3";
+		interrupts = <GIC_SPI 144 IRQ_TYPE_LEVEL_HIGH>,
+			     <GIC_SPI 145 IRQ_TYPE_LEVEL_HIGH>;
+	};
 };
